objects/CN_CPPC_Quote__c.object
<CustomObject>
    <fields>
        <fullName>CN_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>CPPC Quotes</relationshipLabel>
        <relationshipName>CPPC_Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CN_Competitor_Product_Price_for_Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Competitor Product Price for Customer</label>
        <referenceTo>CN_Competitor_Product_Price_to_Customer__c</referenceTo>
        <relationshipLabel>CPPC Quotes</relationshipLabel>
        <relationshipName>CPPC_Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CN_Quote__c</fullName>
        <label>Quote</label>
        <referenceTo>Quote</referenceTo>
        <relationshipLabel>CPPC Quotes</relationshipLabel>
        <relationshipName>CPPC_Quotes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>CPPC Quote</label>
    <nameField>
        <displayFormat>L-{00000000}</displayFormat>
        <label>CPPC Quote Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CPPC Quotes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>